{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player1",
            "id": "5670589c-bf3c-4312-a293-44293cc0a0ed",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "0da83823-c95f-4272-b652-2d5101112052",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f420cf45-148a-40c0-b7f4-3ea982e45e46",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard1",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player2",
            "id": "74b9cd24-742c-4e61-828a-8c87b25040d1",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "0357320e-da72-4642-b272-aa91eb699368",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "144db36e-e2af-455f-8baa-5dcf9deb9d12",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard2",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player",
            "id": "ac119752-604f-46d7-9210-05136369ecbb",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "7e754ce8-18c9-45ce-ba83-28b8fe0d03aa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7aef65b3-b14c-43d8-8c21-568e38416146",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard1",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a50f6e71-e364-4703-b39c-1fd76309c733",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard2",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard1",
            "bindingGroup": "Keyboard1",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Keyboard2",
            "bindingGroup": "Keyboard2",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}